--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+graphql_client = "0.14"
+reqwest = { version = "0.12.4", features = ["json"] }
+reqwest-graphql = "1.0.0"
+base64 = "0.22.1"
 
 [workspace]
 members = ["src-tauri"]
