--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ web-sys = "0.3"
 js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
+serde_json = "1"
 console_error_panic_hook = "0.1.7"
 graphql_client = "0.14"
 reqwest = { version = "0.12.4", features = ["json"] }
