--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,10 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = [ "api-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+notify = "6.1.1"
+futures = "0.3"
+async-std = { version = "1.12.0", features = ["attributes"] }  # for async sleep
+async-channel = "2.3.1"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
