--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,10 @@ notify = "6.1.1"
 futures = "0.3"
 async-std = { version = "1.12.0", features = ["attributes"] }  # for async sleep
 async-channel = "2.3.1"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12.4", features = ["json"] }
+reqwest-graphql = "1.0.0"
+base64 = "0.22.1"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
