--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12.4", features = ["json"] }
 reqwest-graphql = "1.0.0"
 base64 = "0.22.1"
+lazy_static = "1.5.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
